--- a/package.json
+++ b/package.json
@@ -14,26 +14,25 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@types/connect-flash": "^0.0.37",
-    "@types/cors": "^2.8.13",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.1.0",
-    "mongoose": "^6.8.4",
-    "typescript": "^5.0.2"
+    "mongoose": "^6.8.4"
   }
 }
