--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/bcrypt": "^5.0.0",
     "@types/connect-flash": "^0.0.37",
     "@types/cookie-parser": "^1.4.3",
+    "@types/dompurify": "^3.0.1",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
+    "@types/jsdom": "^21.1.1",
+    "@types/marked": "^4.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
@@ -28,11 +31,15 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
+    "dompurify": "^3.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsdom": "^21.1.1",
+    "marked": "^4.3.0",
     "mongodb": "^5.1.0",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "slugify": "^1.6.6"
   }
 }
