--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "start-dev": "ts-node-dev src/index.ts",
+    "test": "jest --runInBand --detectOpenHandles",
+    "start-dev": "ts-node-dev src/app.ts",
     "start": "node build/index.js",
     "lint:ejs": "ejslint src/public/views/navbar.ejs"
   },
   "keywords": [],
-  "author": "",
+  "author": "Victor Abbah",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -19,8 +20,14 @@
     "@types/dompurify": "^3.0.1",
     "@types/express": "^4.17.15",
     "@types/express-session": "^1.17.5",
+    "@types/jest": "^29.5.0",
     "@types/jsdom": "^21.1.1",
     "@types/marked": "^4.0.8",
+    "@types/mongodb-memory-server": "^2.3.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.12.2",
+    "supertest": "^6.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
@@ -36,10 +43,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "joi": "^17.8.3",
     "jsdom": "^21.1.1",
     "marked": "^4.3.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.8.4",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uuidv4": "^6.2.13"
   }
 }
