--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tsc": "tsc",
     "test": "jest --runInBand --detectOpenHandles",
     "start-dev": "ts-node-dev src/app.ts",
-    "start": "node build/index.js",
+    "start": "node build/app.js",
     "lint:ejs": "ejslint src/public/views/navbar.ejs"
   },
   "keywords": [],
